--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+= Changes for PerlMaple 0.07 (rev 51) - Nov 20, 2009
+
+* applied the POD patch from Frank Wiegand.
+
 = Changes for PerlMaple 0.06 (rev 48) - May 2, 2006
 
 == Core Enhancements
